--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 alembic==1.7.7
+backports.zoneinfo==0.2.1
+cffi==1.15.1
 click==8.1.2
+cryptography==37.0.4
 Flask==2.1.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -10,6 +13,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+pycparser==2.21
+PyMySQL==1.0.2
 SQLAlchemy==1.4.35
 Werkzeug==2.1.1
 zipp==3.8.0
